sjengida/c0/rook_mobility
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/rook_mobility/src/neval.c:691:11: error: use of undeclared identifier 'rook_mobility_dir'
for ( l = rook_mobility_dir[diridx] + square; board[l] == 13; l += rook_mobility_dir[diridx] ) 
          ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/rook_mobility/src/neval.c:691:68: error: use of undeclared identifier 'rook_mobility_dir'
for ( l = rook_mobility_dir[diridx] + square; board[l] == 13; l += rook_mobility_dir[diridx] ) 
                                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/rook_mobility/src/obj/neval.o] Error 1
